# OrnsteinZernike

./: .gitignore  Cargo.toml  README.md
OZ_parallel/: Cargo.toml
OZ_parallel/src/: closure.rs  main.rs  potential.rs
OZ_serial/: Cargo.toml
OZ_serial/src/: closure.rs  data.rs  grid.rs  integral.rs  main.rs  solver.rs
