[package]
name = "OZ_serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["blas"] }
plotly = { version = "0.8.3", features = ["ndarray"] }
rustdct = "0.7.1"
